refactor: 재고 분리 및 전체 리팩토링